Bug 96689 - The output patterm of DMA Buffer with YUY2/RGB888/RGB565 for 720x576p are incorrect
Summary: The output patterm of DMA Buffer with YUY2/RGB888/RGB565 for 720x576p are inc...
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: haihao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-27 02:48 UTC by Lim Siew Hoon
Modified: 2016-06-30 05:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Lim Siew Hoon 2016-06-27 02:48:50 UTC
This another IPU camera plugins with gst-icamerasrc with DMA buffer is having incorrect output patterm after this new code changed introduced by below commit for APL-I (BXT-P) platform: 

commit 656c16bf9a399ea3154a12f24846323bfe3ef4e5
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Mon Apr 11 16:22:18 2016 +0800

    Set the right alignment on BXT/KBL

    With the commit 'CSC: Remove average logic when saving NV12 surface on IVB+',
    This fixes https://bugs.freedesktop.org/show_bug.cgi?id=94845 on BXT/KBL

    Reviewed-by: Kelley, Sean V <sean.v.kelley@intel.com>
    Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>

diff --git a/src/i965_device_info.c b/src/i965_device_info.c
index 6ac1d0c..c777a0d 100644
--- a/src/i965_device_info.c
+++ b/src/i965_device_info.c
@@ -378,7 +378,7 @@ static struct hw_codec_info bxt_hw_codec_info = {

     .max_width = 4096,
     .max_height = 4096,
-    .min_linear_wpitch = 64,
+    .min_linear_wpitch = 128,
     .min_linear_hpitch = 16,

     .h264_mvc_dec_profiles = (VA_PROFILE_MASK(H264StereoHigh) |
@@ -430,7 +430,7 @@ static struct hw_codec_info kbl_hw_codec_info = {

     .max_width = 4096,
     .max_height = 4096,
-    .min_linear_wpitch = 64,
+    .min_linear_wpitch = 128,
     .min_linear_hpitch = 16,

     .h264_mvc_dec_profiles = (VA_PROFILE_MASK(H264StereoHigh) |



It is the IPU DMA HW limitation to be 32 bytes or 64 bytes.
Comment 1 Lim Siew Hoon 2016-06-28 01:14:31 UTC
My colleague, Cheah, Vincent Beng Keat <vincent.beng.keat.cheah@intel.com> verified this patch from "https://lists.freedesktop.org/archives/libva/2016-June/004053.html" are working and issue no longer reproduce anymore.

Thank you.
Comment 2 haihao 2016-06-30 05:40:43 UTC
Fixed by Yakui.

commit bcde10dac40cbc4c8502fa519404c9379372184b
Author: Zhao Yakui <yakui.zhao@intel.com>
Date:   Mon Jun 27 12:08:26 2016 +0800

    Downgrade the alignment requirement for linear surface on BDW+


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.